# harmonic-engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/harmonic_engine/: Application.h  MainWindow.h
include/harmonic_engine/AudioEngine/: AudioClip.h  AudioEffects.h  AudioFileLoader.h  AudioRecorder.h  DrumSequencer.h  EffectBase.h  Engine.h  Instrument.h  InstrumentManager.h  MidiClip.h  MixerGraph.h  MultiTrackMixer.h  SampleLoader.h  Track.h  TrackManager.h  Transport.h
include/harmonic_engine/GUI/: AudioRegion.h  BottomWorkspace.h  BrowserPanel.h  Dashboard.h  DesignTokens.h  EffectRack.h  GlobalTracks.h  InspectorPanel.h  InstrumentSelector.h  LookAndFeel.h  MainEditor.h  MenuBar.h  MixerView.h  PianoRoll.h  StatusBar.h  StepSequencer.h  TimelineView.h  Toolbar.h  TransportBar.h  VirtualKeyboard.h  ZoomControls.h
include/harmonic_engine/State/: ProjectState.h  UndoManager.h
source/: Application.cpp  Main.cpp  MainWindow.cpp
source/AudioEngine/: AudioClip.cpp  AudioEffects.cpp  AudioFileLoader.cpp  AudioRecorder.cpp  DrumSequencer.cpp  Engine.cpp  Instrument.cpp  InstrumentManager.cpp  MidiClip.cpp  MixerGraph.cpp  MultiTrackMixer.cpp  SampleLoader.cpp  Track.cpp  TrackManager.cpp  Transport.cpp
source/GUI/: AudioRegion.cpp  BottomWorkspace.cpp  BrowserPanel.cpp  Dashboard.cpp  EffectRack.cpp  GlobalTracks.cpp  InspectorPanel.cpp  InstrumentSelector.cpp  LookAndFeel.cpp  MainEditor.cpp  MenuBar.cpp  MixerView.cpp  PianoRoll.cpp  StatusBar.cpp  StepSequencer.cpp  TimelineView.cpp  Toolbar.cpp  TransportBar.cpp  VirtualKeyboard.cpp  ZoomControls.cpp
source/State/: ProjectState.cpp  UndoManager.cpp
test/: CMakeLists.txt
test/source/: TransportTest.cpp
